wifi: rtw89: leave idle mode when setting WEP encryption for AP mode (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9009,6 +9009,7 @@
 	patches.suse/wifi-rtw88-do-not-ignore-hardware-read-error-during-.patch
 	patches.suse/wifi-rtw89-8922a-fix-TX-fail-with-wrong-VCO-setting.patch
 	patches.suse/wifi-rtlwifi-disable-ASPM-for-RTL8723BE-with-subsyst.patch
+	patches.suse/wifi-rtw89-leave-idle-mode-when-setting-WEP-encrypti.patch
 	patches.suse/wifi-rtw89-pci-enlarge-retry-times-of-RX-tag-to-1000.patch
 	patches.suse/wifi-rtw88-usb-Reduce-control-message-timeout-to-500.patch
 	patches.suse/wifi-rtw88-fix-the-para-buffer-size-to-avoid-reading.patch
