--- a/series.conf
+++ b/series.conf
@@ -9035,6 +9035,7 @@
 	patches.suse/wifi-mt76-mt7925-refine-the-sniffer-commnad.patch
 	patches.suse/wifi-mt76-mt7925-ensure-all-MCU-commands-wait-for-re.patch
 	patches.suse/wifi-mt76-mt7996-set-EHT-max-ampdu-length-capability.patch
+	patches.suse/wifi-mt76-mt7996-drop-fragments-with-multicast-or-br.patch
 	patches.suse/wifi-mt76-mt7996-fix-RX-buffer-size-of-MCU-event.patch
 	patches.suse/net-usb-aqc111-fix-error-handling-of-usbnet-read-cal.patch
 	patches.suse/net-phy-fix-up-const-issues-in-to_mdio_device-and-to.patch
