--- a/series.conf
+++ b/series.conf
@@ -8984,6 +8984,7 @@
 	patches.suse/wifi-ath12k-Resolve-multicast-packet-drop-by-populat.patch
 	patches.suse/wifi-ath12k-Fix-WMI-tag-for-EHT-rate-in-peer-assoc.patch
 	patches.suse/wifi-ath12k-Fix-buffer-overflow-in-debugfs.patch
+	patches.suse/wifi-ath12k-fix-failed-to-set-mhi-state-error-during.patch
 	patches.suse/wifi-ath12k-Handle-error-cases-during-extended-skb-a.patch
 	patches.suse/wifi-ath12k-fix-invalid-access-to-memory.patch
 	patches.suse/wifi-ath12k-Add-MSDU-length-validation-for-TKIP-MIC-.patch
