wifi: mac80211: do not offer a mesh path if forwarding is disabled (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9000,6 +9000,7 @@
 	patches.suse/Bluetooth-btusb-Add-new-VID-PID-13d3-3584-for-MT7922.patch
 	patches.suse/Bluetooth-MGMT-iterate-over-mesh-commands-in-mgmt_me.patch
 	patches.suse/Bluetooth-btintel-Check-dsbr-size-from-EFI-variable.patch
+	patches.suse/wifi-mac80211-do-not-offer-a-mesh-path-if-forwarding.patch
 	patches.suse/wifi-iwlfiwi-mvm-Fix-the-rate-reporting.patch
 	patches.suse/wifi-rtw88-sdio-map-mgmt-frames-to-queue-TX_DESC_QSE.patch
 	patches.suse/wifi-rtw88-sdio-call-rtw_sdio_indicate_tx_status-unc.patch
