wifi: rtw88: usb: Upload the firmware in bigger chunks (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9012,6 +9012,7 @@
 	patches.suse/wifi-rtw89-leave-idle-mode-when-setting-WEP-encrypti.patch
 	patches.suse/wifi-rtw89-pci-enlarge-retry-times-of-RX-tag-to-1000.patch
 	patches.suse/wifi-rtw88-usb-Reduce-control-message-timeout-to-500.patch
+	patches.suse/wifi-rtw88-usb-Upload-the-firmware-in-bigger-chunks.patch
 	patches.suse/wifi-rtw88-fix-the-para-buffer-size-to-avoid-reading.patch
 	patches.suse/wifi-rtw89-fix-firmware-scan-delay-unit-for-WiFi-6-c.patch
 	patches.suse/wifi-p54-prevent-buffer-overflow-in-p54_rx_eeprom_re.patch
