--- a/series.conf
+++ b/series.conf
@@ -24893,6 +24893,7 @@
 	patches.suse/dm-delay-fix-hung-task-introduced-by-kthread-mode.patch
 	patches.suse/dm-delay-fix-max_delay-calculations.patch
 	patches.suse/cxgb4-unnecessary-check-for-0-in-the-free_sge_txq_ul.patch
+	patches.suse/bpftool-Fix-missing-pids-during-link-show.patch
 	patches.suse/selftests-bpf-Prevent-client-connect-before-server-b.patch
 	patches.suse/selftests-bpf-Fix-flaky-test-btf_map_in_map-lookup_u.patch
 	patches.suse/tcp-dccp-bypass-empty-buckets-in-inet_twsk_purge.patch
