bpf: sockmap, updating the sg structure should also update curr (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -18446,6 +18446,7 @@
 	patches.suse/netfilter-nf_tables-bail-out-on-mismatching-dynset-a.patch
 	patches.suse/netfilter-nf_tables-validate-family-when-identifying.patch
 	patches.suse/net-tls-update-curr-on-splice-as-well.patch
+	patches.suse/bpf-sockmap-updating-the-sg-structure-should-also-up.patch
 	patches.suse/net-dsa-microchip-provide-a-list-of-valid-protocols-.patch
 	patches.suse/vsock-virtio-fix-comparison-of-distinct-pointer-type.patch
 	patches.suse/squashfs-squashfs_read_data-need-to-check-if-the-length-is-0.patch
