--- a/series.conf
+++ b/series.conf
@@ -24896,6 +24896,7 @@
 	patches.suse/bpftool-Fix-missing-pids-during-link-show.patch
 	patches.suse/bpf-lpm_trie-Inline-longest_prefix_match-for-fastpat.patch
 	patches.suse/selftests-bpf-Prevent-client-connect-before-server-b.patch
+	patches.suse/bpftool-Remove-unnecessary-source-files-from-bootstr.patch
 	patches.suse/selftests-bpf-Fix-flaky-test-btf_map_in_map-lookup_u.patch
 	patches.suse/tcp-dccp-bypass-empty-buckets-in-inet_twsk_purge.patch
 	patches.suse/qed-avoid-truncating-work-queue-length.patch
