selftests/bpf: Change functions definitions to support GCC (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -25010,6 +25010,7 @@
 	patches.suse/bpf-Avoid-__hidden__-attribute-in-static-object.patch
 	patches.suse/bpf-Disable-some-attribute-ignored-warnings-in-GCC.patch
 	patches.suse/selftests-bpf-Add-CFLAGS-per-source-file-and-runner.patch
+	patches.suse/selftests-bpf-Change-functions-definitions-to-suppor.patch
 	patches.suse/bpf-Avoid-uninitialized-value-in-BPF_CORE_READ_BITFI.patch
 	patches.suse/kbuild-bpf-Switch-to-using-btf_features-for-pahole-v.patch
 	patches.suse/s390-bpf-Emit-a-barrier-for-BPF_FETCH-instructions.patch
