--- a/series.conf
+++ b/series.conf
@@ -25014,6 +25014,7 @@
 	patches.suse/bpf-Avoid-uninitialized-value-in-BPF_CORE_READ_BITFI.patch
 	patches.suse/kbuild-bpf-Switch-to-using-btf_features-for-pahole-v.patch
 	patches.suse/s390-bpf-Emit-a-barrier-for-BPF_FETCH-instructions.patch
+	patches.suse/selftests-bpf-Fix-a-few-tests-for-GCC-related-warnin.patch
 	patches.suse/net-mana-Enable-MANA-driver-on-ARM64-with-4K-page-si.patch
 	patches.suse/net-stmmac-move-the-EST-lock-to-struct-stmmac_priv.patch
 	patches.suse/Bluetooth-ath3k-Fix-multiple-issues-reported-by-chec.patch
