selftests/bpf: Fix pointer arithmetic in test_xdp_do_redirect (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -25006,6 +25006,7 @@
 	patches.suse/net-usb-smsc95xx-stop-lying-about-skb-truesize.patch
 	patches.suse/net-ena-Add-validation-for-completion-descriptors-co.patch
 	patches.suse/bpf-Fix-verifier-assumptions-about-socket-sk.patch
+	patches.suse/selftests-bpf-Fix-pointer-arithmetic-in-test_xdp_do_.patch
 	patches.suse/bpf-Avoid-uninitialized-value-in-BPF_CORE_READ_BITFI.patch
 	patches.suse/kbuild-bpf-Switch-to-using-btf_features-for-pahole-v.patch
 	patches.suse/s390-bpf-Emit-a-barrier-for-BPF_FETCH-instructions.patch
