--- a/series.conf
+++ b/series.conf
@@ -25007,6 +25007,7 @@
 	patches.suse/net-ena-Add-validation-for-completion-descriptors-co.patch
 	patches.suse/bpf-Fix-verifier-assumptions-about-socket-sk.patch
 	patches.suse/selftests-bpf-Fix-pointer-arithmetic-in-test_xdp_do_.patch
+	patches.suse/bpf-Avoid-__hidden__-attribute-in-static-object.patch
 	patches.suse/bpf-Avoid-uninitialized-value-in-BPF_CORE_READ_BITFI.patch
 	patches.suse/kbuild-bpf-Switch-to-using-btf_features-for-pahole-v.patch
 	patches.suse/s390-bpf-Emit-a-barrier-for-BPF_FETCH-instructions.patch
