bpf: Fix potential integer overflow in resolve_btfids (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -25595,6 +25595,7 @@
 	patches.suse/enic-Validate-length-of-nl-attributes-in-enic_set_vf.patch
 	patches.suse/Octeontx2-pf-Free-send-queue-buffers-incase-of-leaf-.patch
 	patches.suse/net-usb-smsc95xx-fix-changing-LED_SEL-bit-value-upda.patch
+	patches.suse/bpf-Fix-potential-integer-overflow-in-resolve_btfids.patch
 	patches.suse/bpf-Allow-delete-from-sockmap-sockhash-only-if-updat.patch
 	patches.suse/Revert-bpf-sockmap-Prevent-lock-inversion-deadlock-i.patch
 	patches.suse/selftests-bpf-Cover-verifier-checks-for-mutating-soc.patch
