compiler_types.h: Define __retain for __attribute__((__retain__)) (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -25910,6 +25910,7 @@
 	patches.suse/wifi-mac80211-Recalc-offload-when-monitor-stop.patch
 	patches.suse/wifi-mac80211-Avoid-address-calculations-via-out-of-.patch
 	patches.suse/wifi-mac80211-fix-monitor-channel-with-chanctx-emula.patch
+	patches.suse/compiler_types.h-Define-__retain-for-__attribute__-_.patch
 	patches.suse/ice-avoid-IRQ-collision-to-fix-init-failure-on-ACPI-.patch
 	patches.suse/ice-fix-200G-link-speed-message-log.patch
 	patches.suse/ice-implement-AQ-download-pkg-retry.patch
