powerpc/bpf: enforce full ordering for ATOMIC operations with BPF_FETCH (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -25665,6 +25665,7 @@
 	patches.suse/xfs-Add-cond_resched-to-block-unmap-range-and-reflin.patch
 	patches.suse/kconfig-fix-comparison-to-constant-symbols-m-n.patch
 	patches.suse/kheaders-explicitly-define-file-modes-for-archived-h.patch
+	patches.suse/powerpc-bpf-enforce-full-ordering-for-ATOMIC-operati.patch
 	patches.suse/powerpc-pseries-lparcfg-drop-error-message-from-gues.patch
 	patches.suse/powerpc-uaccess-Fix-build-errors-seen-with-GCC-13-14.patch
 	patches.suse/powerpc-uaccess-Use-YZ-asm-constraint-for-ld.patch
