bpf: fix order of args in call to bpf_map_kvcalloc (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -26222,6 +26222,7 @@
 	patches.suse/udp-Set-SOCK_RCU_FREE-earlier-in-udp_lib_get_port.patch
 	patches.suse/net-sched-Fix-UAF-when-resolving-a-clash.patch
 	patches.suse/net-sunrpc-Remap-EPERM-in-case-of-connection-failure.patch
+	patches.suse/bpf-fix-order-of-args-in-call-to-bpf_map_kvcalloc.patch
 	patches.suse/bpf-Fail-bpf_timer_cancel-when-callback-is-being-can.patch
 	patches.suse/bpf-Defer-work-in-bpf_timer_cancel_and_free.patch
 	patches.suse/selftests-bpf-Add-timer-lockup-selftest.patch
