bpftool: Un-const bpf_func_info to fix it for llvm 17 and newer (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -26410,6 +26410,7 @@
 	patches.suse/perf-x86-intel-ds-Fix-non-0-retire-latency-on-Raptorlake.patch
 	patches.suse/perf-x86-intel-Add-a-distinct-name-for-Granite-Rapids.patch
 	patches.suse/kbuild-bpf-Use-test-ge-check-for-v1.25-only-pahole.patch
+	patches.suse/bpftool-Un-const-bpf_func_info-to-fix-it-for-llvm-17.patch
 	patches.suse/tcp-add-tcp_done_with_error-helper.patch
 	patches.suse/tcp-fix-race-in-tcp_write_err.patch
 	patches.suse/tcp-fix-races-in-tcp_abort.patch
