selftests/bpf: Fix prog numbers in test_sockmap (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -26411,6 +26411,7 @@
 	patches.suse/perf-x86-intel-Add-a-distinct-name-for-Granite-Rapids.patch
 	patches.suse/kbuild-bpf-Use-test-ge-check-for-v1.25-only-pahole.patch
 	patches.suse/bpftool-Un-const-bpf_func_info-to-fix-it-for-llvm-17.patch
+	patches.suse/selftests-bpf-Fix-prog-numbers-in-test_sockmap.patch
 	patches.suse/tcp-add-tcp_done_with_error-helper.patch
 	patches.suse/tcp-fix-race-in-tcp_write_err.patch
 	patches.suse/tcp-fix-races-in-tcp_abort.patch
