serial: imx: Restore original RXTL for console to fix data loss (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32719,6 +32719,7 @@
 	patches.suse/drm-i915-fix-build-error-some-more.patch
 	patches.suse/i2c-robotfuzz-osif-disable-zero-length-read-messages.patch
 	patches.suse/i2c-tiny-usb-disable-zero-length-read-messages.patch
+	patches.suse/serial-imx-Restore-original-RXTL-for-console-to-fix-.patch
 
 	########################################################
 	# end of sorted patches
