--- a/series.conf
+++ b/series.conf
@@ -32720,6 +32720,7 @@
 	patches.suse/i2c-robotfuzz-osif-disable-zero-length-read-messages.patch
 	patches.suse/i2c-tiny-usb-disable-zero-length-read-messages.patch
 	patches.suse/serial-imx-Restore-original-RXTL-for-console-to-fix-.patch
+	patches.suse/staging-rtl8723bs-Avoid-memset-in-aes_cipher-and-aes.patch
 
 	########################################################
 	# end of sorted patches
