--- a/series.conf
+++ b/series.conf
@@ -20106,6 +20106,7 @@
 	patches.suse/net-mlx5-DPLL-Implement-fractional-frequency-offset-.patch
 	patches.suse/net-gro-parse-ipv6-ext-headers-without-frag0-invalid.patch
 	patches.suse/bpf-Simplify-checking-size-of-helper-accesses.patch
+	patches.suse/bpf-Add-a-possibly-zero-sized-read-test.patch
 	patches.suse/bpf-Relax-tracing-prog-recursive-attach-rules.patch
 	patches.suse/selftests-bpf-Add-test-for-recursive-attachment-of-t.patch
 	patches.suse/bpf-Fix-re-attachment-branch-in-bpf_tracing_prog_att.patch
