--- a/series.conf
+++ b/series.conf
@@ -9521,6 +9521,7 @@
 	patches.suse/i2c-tiny-usb-disable-zero-length-read-messages.patch
 	patches.suse/serial-core-restore-of_node-information-in-sysfs.patch
 	patches.suse/serial-imx-Restore-original-RXTL-for-console-to-fix-.patch
+	patches.suse/staging-rtl8723bs-Avoid-memset-in-aes_cipher-and-aes.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
