serial: core: restore of_node information in sysfs (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9519,6 +9519,7 @@
 	patches.suse/drm-xe-Process-deferred-GGTT-node-removals-on-device.patch
 	patches.suse/i2c-robotfuzz-osif-disable-zero-length-read-messages.patch
 	patches.suse/i2c-tiny-usb-disable-zero-length-read-messages.patch
+	patches.suse/serial-core-restore-of_node-information-in-sysfs.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
