--- a/series.conf
+++ b/series.conf
@@ -9520,6 +9520,7 @@
 	patches.suse/i2c-robotfuzz-osif-disable-zero-length-read-messages.patch
 	patches.suse/i2c-tiny-usb-disable-zero-length-read-messages.patch
 	patches.suse/serial-core-restore-of_node-information-in-sysfs.patch
+	patches.suse/serial-imx-Restore-original-RXTL-for-console-to-fix-.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
