Grab mm lock before grabbing pt lock (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -5344,6 +5344,7 @@
 	patches.suse/cxl-events-Update-DRAM-Event-Record-to-CXL-spec-rev-.patch
 	patches.suse/cxl-events-Update-Memory-Module-Event-Record-to-CXL-.patch
 	patches.suse/cxl-core-regs-Refactor-out-functions-to-count-regblo.patch
+	patches.suse/Grab-mm-lock-before-grabbing-pt-lock.patch
 	patches.suse/regulator-core-Add-missing-newline-character.patch
 	patches.suse/dmaengine-idxd-Remove-unused-idxd_-un-register_bus_t.patch
 	patches.suse/dmaengine-ti-edma-fix-OF-node-reference-leaks-in-edm.patch
