Xen/swiotlb: mark xen_swiotlb_fixup() __init (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -5697,6 +5697,7 @@
 	patches.suse/drm-xe-client-bo-client-does-not-need-bos_lock.patch
 	patches.suse/xen-swiotlb-relax-alignment-requirements.patch
 	patches.suse/x86-xen-allow-larger-contiguous-memory-regions-in-PV.patch
+	patches.suse/Xen-swiotlb-mark-xen_swiotlb_fixup-__init.patch
 	patches.suse/iommu-Fix-potential-memory-leak-in-iopf_queue_remove.patch
 	patches.suse/iommu-amd-Expicitly-enable-CNTRL.EPHEn-bit-in-resume.patch
 	patches.suse/arm64-Handle-.ARM.attributes-section-in-linker-scripts.patch
