--- a/series.conf
+++ b/series.conf
@@ -6656,6 +6656,7 @@
 	patches.suse/KVM-x86-Add-infrastructure-for-secure-TSC.patch
 	patches.suse/KVM-x86-block-KVM_CAP_SYNC_REGS-if-guest-state-is-pr.patch
 	patches.suse/xen-Add-support-for-XenServer-6.1-platform-device.patch
+	patches.suse/xen-mcelog-Add-__nonstring-annotations-for-untermina.patch
 	patches.suse/xenfs-xensyms-respect-hypervisor-s-next-indication.patch
 	patches.suse/PCI-vmd-Disable-MSI-remapping-bypass-under-Xen.patch
 	patches.suse/PCI-MSI-Convert-pci_msi_ignore_mask-to-per-MSI-domai.patch
