--- a/series.conf
+++ b/series.conf
@@ -32712,6 +32712,7 @@
 	patches.suse/hwmon-occ-fix-unaligned-accesses.patch
 	patches.suse/can-tcan4x5x-fix-power-regulator-retrieval-during-pr.patch
 	patches.suse/net-sched-fix-use-after-free-in-taprio_dev_notifier.patch
+	patches.suse/net-ice-Perform-accurate-aRFS-flow-match.patch
 	patches.suse/calipso-Fix-null-ptr-deref-in-calipso_req_-set-del-a.patch
 	patches.suse/NFC-nci-uart-Set-tty-disc_data-only-in-success-path.patch
 	patches.suse/wifi-carl9170-do-not-ping-device-which-has-failed-to.patch
