ice: Fix LACP bonds without SRIOV environment (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32292,6 +32292,7 @@
 	patches.suse/can-bcm-add-locking-for-bcm_op-runtime-updates.patch
 	patches.suse/can-bcm-add-missing-rcu-read-protection-for-procfs-c.patch
 	patches.suse/ice-fix-vf-num_mac-count-with-port-representors.patch
+	patches.suse/ice-Fix-LACP-bonds-without-SRIOV-environment.patch
 	patches.suse/sch_hfsc-Fix-qlen-accounting-bug-when-using-peek-in-hfsc_e.patch
 	patches.suse/espintcp-fix-skb-leaks.patch
 	patches.suse/can-slcan-allow-reception-of-short-error-messages.patch
