--- a/series.conf
+++ b/series.conf
@@ -32675,6 +32675,7 @@
 	patches.suse/net-mdiobus-Fix-potential-out-of-bounds-read-write-a.patch
 	patches.suse/net-mdiobus-Fix-potential-out-of-bounds-clause-45-re.patch
 	patches.suse/i40e-return-false-from-i40e_reset_vf-if-reset-is-in-.patch
+	patches.suse/i40e-retry-VFLR-handling-if-there-is-ongoing-VF-rese.patch
 	patches.suse/net_sched-sch_sfq-reject-invalid-perturb-period.patch
 	patches.suse/net_sched-prio-fix-a-race-in-prio_tune.patch
 	patches.suse/net_sched-red-fix-a-race-in-__red_change.patch
