netlink: fix potential sleeping issue in mqueue_flush_file (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -21164,6 +21164,7 @@
 	patches.suse/net-rds-Fix-UBSAN-array-index-out-of-bounds-in-rds_c.patch
 	patches.suse/tcp-Add-memory-barrier-to-tcp_push.patch
 	patches.suse/selftest-Don-t-reuse-port-for-SO_INCOMING_CPU-test.patch
+	patches.suse/netlink-fix-potential-sleeping-issue-in-mqueue_flush.patch
 	patches.suse/ipv6-init-the-accept_queue-s-spinlocks-in-inet6_crea.patch
 	patches.suse/wifi-p54-fix-GCC-format-truncation-warning-with-wiph.patch
 	patches.suse/wifi-ath11k-rely-on-mac80211-debugfs-handling-for-vi.patch
