devlink: fix port dump cmd type (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -21818,6 +21818,7 @@
 	patches.suse/tls-don-t-skip-over-different-type-records-from-the-.patch
 	patches.suse/tools-ynl-make-sure-we-always-pass-yarg-to-mnl_cb_ru.patch
 	patches.suse/tools-ynl-don-t-leak-mcast_groups-on-init-error.patch
+	patches.suse/devlink-fix-port-dump-cmd-type.patch
 	patches.suse/net-sched-flower-Add-lock-protection-when-remove-filter-handle.patch
 	patches.suse/net-sparx5-Add-spinlock-for-frame-transmission-from-.patch
 	patches.suse/phonet-pep-fix-racy-skb_queue_empty-use.patch
