netlink: specs: dpll: replace underscores with dashes in names (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32734,6 +32734,7 @@
 	patches.suse/sunrpc-handle-SVC_GARBAGE-during-svc-auth-processing-as-auth-error.patch
 	patches.suse/bnxt-properly-flush-XDP-redirect-lists.patch
 	patches.suse/wifi-mac80211-fix-beacon-interval-calculation-overfl.patch
+	patches.suse/netlink-specs-dpll-replace-underscores-with-dashes-i.patch
 	patches.suse/HID-wacom-fix-memory-leak-on-kobject-creation-failur.patch
 	patches.suse/HID-wacom-fix-memory-leak-on-sysfs-attribute-creatio.patch
 	patches.suse/HID-wacom-fix-kobject-reference-count-leak.patch
