devlink: Fix referring to hw_addr attribute during state validation (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -21308,6 +21308,7 @@
 	patches.suse/ipv6-Ensure-natural-alignment-of-const-ipv6-loopback-and-router-addresses.patch
 	patches.suse/net-stmmac-do-not-clear-TBS-enable-bit-on-link-up-do.patch
 	patches.suse/llc-call-sock_orphan-at-release-time.patch
+	patches.suse/devlink-Fix-referring-to-hw_addr-attribute-during-st.patch
 	patches.suse/e1000e-correct-maximum-frequency-adjustment-values.patch
 	patches.suse/ixgbe-Fix-an-error-handling-path-in-ixgbe_read_iosf_.patch
 	patches.suse/net-ipv4-fix-a-memleak-in-ip_setup_cork.patch
