--- a/series.conf
+++ b/series.conf
@@ -32607,6 +32607,7 @@
 	patches.suse/rtc-Make-rtc_time64_to_tm-support-dates-before-1970.patch
 	patches.suse/rtc-Fix-offset-calculation-for-.start_secs-0.patch
 	patches.suse/page_pool-Fix-use-after-free-in-page_pool_recycle_in.patch
+	patches.suse/gve-Fix-RX_BUFFERS_POSTED-stat-to-report-per-queue-f.patch
 	patches.suse/net-usb-aqc111-debug-info-before-sanitation.patch
 	patches.suse/Bluetooth-hci_qca-move-the-SoC-type-check-to-the-rig.patch
 	patches.suse/Bluetooth-L2CAP-Fix-not-responding-with-L2CAP_CR_LE_.patch
