--- a/series.conf
+++ b/series.conf
@@ -32618,6 +32618,7 @@
 	patches.suse/ice-fix-rebuilding-the-Tx-scheduler-tree-for-large-q.patch
 	patches.suse/net-wwan-t7xx-Fix-napi-rx-poll-issue.patch
 	patches.suse/vmxnet3-correctly-report-gso-type-for-UDP-tunnels.patch
+	patches.suse/gve-add-missing-NULL-check-for-gve_alloc_pending_pac.patch
 	patches.suse/PM-sleep-Fix-power.is_suspended-cleanup-for-direct-c.patch
 	patches.suse/drm-i915-gem-Allow-EXEC_CAPTURE-on-recoverable-conte.patch
 	patches.suse/drm-amd-display-Add-null-pointer-check-for-get_first.patch
