--- a/series.conf
+++ b/series.conf
@@ -32502,6 +32502,7 @@
 	patches.suse/msft-hv-3280-net-mana-Add-support-for-Multi-Vports-on-Bare-metal.patch
 	patches.suse/net-mlx5_core-Add-error-handling-inmlx5_query_nic_vp.patch
 	patches.suse/net-phy-clear-phydev-devlink-when-the-link-is-delete.patch
+	patches.suse/net-mlx5-Add-error-handling-in-mlx5_query_nic_vport_.patch
 	patches.suse/net-phy-mscc-Fix-memory-leak-when-using-one-step-tim.patch
 	patches.suse/net_sched-hfsc-Address-reentrant-enqueue-adding-clas.patch
 	patches.suse/net-phy-mscc-Stop-clearing-the-the-UDPv4-checksum-fo.patch
