ice: fix Tx scheduler error handling in XDP callback (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32613,6 +32613,7 @@
 	patches.suse/Bluetooth-hci_qca-move-the-SoC-type-check-to-the-rig.patch
 	patches.suse/Bluetooth-L2CAP-Fix-not-responding-with-L2CAP_CR_LE_.patch
 	patches.suse/net-fix-udp-gso-skb_segment-after-pull-from-frag_lis.patch
+	patches.suse/ice-fix-Tx-scheduler-error-handling-in-XDP-callback.patch
 	patches.suse/net-wwan-t7xx-Fix-napi-rx-poll-issue.patch
 	patches.suse/vmxnet3-correctly-report-gso-type-for-UDP-tunnels.patch
 	patches.suse/PM-sleep-Fix-power.is_suspended-cleanup-for-direct-c.patch
