xen/pci: Do not register devices with segments >= 0x10000 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -6658,6 +6658,7 @@
 	patches.suse/xen-Add-support-for-XenServer-6.1-platform-device.patch
 	patches.suse/xen-mcelog-Add-__nonstring-annotations-for-untermina.patch
 	patches.suse/xenfs-xensyms-respect-hypervisor-s-next-indication.patch
+	patches.suse/xen-pci-Do-not-register-devices-with-segments-0x1000.patch
 	patches.suse/PCI-vmd-Disable-MSI-remapping-bypass-under-Xen.patch
 	patches.suse/PCI-MSI-Convert-pci_msi_ignore_mask-to-per-MSI-domai.patch
 	patches.suse/msft-hv-3189-hyperv-Move-hv_current_partition_id-to-arch-generic-.patch
