mm/hugetlb: fix huge_pmd_unshare() vs GUP-fast race (bsc#1245431).

--- a/series.conf
+++ b/series.conf
@@ -32643,6 +32643,7 @@
 	patches.suse/spi-bcm63xx-hsspi-fix-shared-reset.patch
 	patches.suse/KVM-s390-rename-PROT_NONE-to-PROT_TYPE_DUMMY.patch
 	patches.suse/0001-mm-hugetlb-unshare-page-tables-during-VMA-split-not-.patch
+	patches.suse/0001-mm-hugetlb-fix-huge_pmd_unshare-vs-GUP-fast-race.patch
 	patches.suse/jffs2-check-that-raw-node-were-preallocated-before-writing-summary.patch
 	patches.suse/jffs2-check-jffs2_prealloc_raw_node_refs-result-in-few-other-places.patch
 	patches.suse/ALSA-usb-audio-Add-a-quirk-for-Lenovo-Thinkpad-Thund.patch
