xen: Change xen-acpi-processor dom0 dependency (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -7983,6 +7983,7 @@
 	patches.suse/gpiolib-of-Fix-the-choice-for-Ingenic-NAND-quirk.patch
 	patches.suse/gpiolib-of-Move-Atmel-HSMCI-quirk-up-out-of-the-regu.patch
 	patches.suse/ublk-fix-handling-recovery-reissue-in-ublk_abort_queue.patch
+	patches.suse/xen-Change-xen-acpi-processor-dom0-dependency.patch
 	patches.suse/x86-xen-fix-balloon-target-initialization-for-PVH-do.patch
 	patches.suse/net-ethtool-fix-ethtool_ringparam_get_cfg-returns-a-.patch
 	patches.suse/tipc-fix-memory-leak-in-tipc_link_xmit.patch
