x86/xen: disable CPU idle and frequency drivers for PVH dom0 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -7985,6 +7985,7 @@
 	patches.suse/ublk-fix-handling-recovery-reissue-in-ublk_abort_queue.patch
 	patches.suse/xen-Change-xen-acpi-processor-dom0-dependency.patch
 	patches.suse/x86-xen-fix-balloon-target-initialization-for-PVH-do.patch
+	patches.suse/x86-xen-disable-CPU-idle-and-frequency-drivers-for-P.patch
 	patches.suse/net-ethtool-fix-ethtool_ringparam_get_cfg-returns-a-.patch
 	patches.suse/tipc-fix-memory-leak-in-tipc_link_xmit.patch
 	patches.suse/sch_htb-make-htb_qlen_notify-idempotent.patch
