octeontx2-pf: QOS: Refactor TC_HTB_LEAF_DEL_LAST callback (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9001,6 +9001,7 @@
 	patches.suse/net-mlx5-Add-error-handling-in-mlx5_query_nic_vport_.patch
 	patches.suse/net-phy-mscc-Fix-memory-leak-when-using-one-step-tim.patch
 	patches.suse/octeontx2-pf-QOS-Perform-cache-sync-on-send-queue-te.patch
+	patches.suse/octeontx2-pf-QOS-Refactor-TC_HTB_LEAF_DEL_LAST-callb.patch
 	patches.suse/net_sched-hfsc-Address-reentrant-enqueue-adding-clas.patch
 	patches.suse/net-phy-mscc-Stop-clearing-the-the-UDPv4-checksum-fo.patch
 	patches.suse/selftests-bpf-Fix-bpf_nf-selftest-failure.patch
