ice: fix vf->num_mac count with port representors (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -8651,6 +8651,7 @@
 	patches.suse/ptp-ocp-Limit-signal-freq-counts-in-summary-output-f.patch
 	patches.suse/can-bcm-add-locking-for-bcm_op-runtime-updates.patch
 	patches.suse/can-bcm-add-missing-rcu-read-protection-for-procfs-c.patch
+	patches.suse/ice-fix-vf-num_mac-count-with-port-representors.patch
 	patches.suse/xsk-Bring-back-busy-polling-support-in-XDP_COPY.patch
 	patches.suse/sch_hfsc-Fix-qlen-accounting-bug-when-using-peek-in-hfsc_e.patch
 	patches.suse/espintcp-fix-skb-leaks.patch
