--- a/series.conf
+++ b/series.conf
@@ -9439,6 +9439,7 @@
 	patches.suse/hwmon-occ-fix-unaligned-accesses.patch
 	patches.suse/hwmon-ltc4282-avoid-repeated-register-write.patch
 	patches.suse/can-tcan4x5x-fix-power-regulator-retrieval-during-pr.patch
+	patches.suse/bnxt_en-Fix-double-invocation-of-bnxt_ulp_stop-bnxt_.patch
 	patches.suse/net-sched-fix-use-after-free-in-taprio_dev_notifier.patch
 	patches.suse/calipso-Fix-null-ptr-deref-in-calipso_req_-set-del-a.patch
 	patches.suse/NFC-nci-uart-Set-tty-disc_data-only-in-success-path.patch
