--- a/series.conf
+++ b/series.conf
@@ -9443,6 +9443,7 @@
 	patches.suse/net-sched-fix-use-after-free-in-taprio_dev_notifier.patch
 	patches.suse/net-ethtool-remove-duplicate-defines-for-family-info.patch
 	patches.suse/net-ice-Perform-accurate-aRFS-flow-match.patch
+	patches.suse/ice-fix-eswitch-code-memory-leak-in-reset-scenario.patch
 	patches.suse/calipso-Fix-null-ptr-deref-in-calipso_req_-set-del-a.patch
 	patches.suse/NFC-nci-uart-Set-tty-disc_data-only-in-success-path.patch
 	patches.suse/wifi-carl9170-do-not-ping-device-which-has-failed-to.patch
