idpf: fix a race in txq wakeup (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9279,6 +9279,7 @@
 	patches.suse/ice-fix-Tx-scheduler-error-handling-in-XDP-callback.patch
 	patches.suse/ice-create-new-Tx-scheduler-nodes-for-new-queues-onl.patch
 	patches.suse/ice-fix-rebuilding-the-Tx-scheduler-tree-for-large-q.patch
+	patches.suse/idpf-fix-a-race-in-txq-wakeup.patch
 	patches.suse/net-wwan-t7xx-Fix-napi-rx-poll-issue.patch
 	patches.suse/net-wwan-mhi_wwan_mbim-use-correct-mux_id-for-multip.patch
 	patches.suse/PM-sleep-Fix-power.is_suspended-cleanup-for-direct-c.patch
