net/mlx5_core: Add error handling inmlx5_query_nic_vport_qkey_viol_cntr() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -8996,6 +8996,7 @@
 	patches.suse/net-phy-fix-up-const-issues-in-to_mdio_device-and-to.patch
 	patches.suse/msft-hv-3280-net-mana-Add-support-for-Multi-Vports-on-Bare-metal.patch
 	patches.suse/vsock-virtio-fix-rx_bytes-accounting-for-stream-sock.patch
+	patches.suse/net-mlx5_core-Add-error-handling-inmlx5_query_nic_vp.patch
 	patches.suse/net-phy-clear-phydev-devlink-when-the-link-is-delete.patch
 	patches.suse/net-phy-mscc-Fix-memory-leak-when-using-one-step-tim.patch
 	patches.suse/net_sched-hfsc-Address-reentrant-enqueue-adding-clas.patch
