netlink: specs: nfsd: replace underscores with dashes in names (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9466,6 +9466,7 @@
 	patches.suse/nfsd-use-threads-array-as-is-in-netlink-interface.patch
 	patches.suse/sunrpc-handle-SVC_GARBAGE-during-svc-auth-processing-as-auth-error.patch
 	patches.suse/bnxt-properly-flush-XDP-redirect-lists.patch
+	patches.suse/netlink-specs-nfsd-replace-underscores-with-dashes-i.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
