net/mlx5: Ensure fw pages are always allocated on same NUMA (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9388,6 +9388,7 @@
 	patches.suse/i40e-retry-VFLR-handling-if-there-is-ongoing-VF-rese.patch
 	patches.suse/iavf-fix-reset_task-for-early-reset-event.patch
 	patches.suse/e1000-Move-cancel_work_sync-to-avoid-deadlock.patch
+	patches.suse/net-mlx5-Ensure-fw-pages-are-always-allocated-on-sam.patch
 	patches.suse/net_sched-sch_sfq-reject-invalid-perturb-period.patch
 	patches.suse/net_sched-prio-fix-a-race-in-prio_tune.patch
 	patches.suse/net_sched-red-fix-a-race-in-__red_change.patch
