--- a/series.conf
+++ b/series.conf
@@ -9277,6 +9277,7 @@
 	patches.suse/Bluetooth-L2CAP-Fix-not-responding-with-L2CAP_CR_LE_.patch
 	patches.suse/net-fix-udp-gso-skb_segment-after-pull-from-frag_lis.patch
 	patches.suse/ice-fix-Tx-scheduler-error-handling-in-XDP-callback.patch
+	patches.suse/ice-create-new-Tx-scheduler-nodes-for-new-queues-onl.patch
 	patches.suse/net-wwan-t7xx-Fix-napi-rx-poll-issue.patch
 	patches.suse/net-wwan-mhi_wwan_mbim-use-correct-mux_id-for-multip.patch
 	patches.suse/PM-sleep-Fix-power.is_suspended-cleanup-for-direct-c.patch
