--- a/series.conf
+++ b/series.conf
@@ -9390,6 +9390,7 @@
 	patches.suse/e1000-Move-cancel_work_sync-to-avoid-deadlock.patch
 	patches.suse/net-mlx5-Ensure-fw-pages-are-always-allocated-on-sam.patch
 	patches.suse/net-mlx5-Fix-ECVF-vports-unload-on-shutdown-flow.patch
+	patches.suse/net-mlx5-Fix-return-value-when-searching-for-existin.patch
 	patches.suse/net_sched-sch_sfq-reject-invalid-perturb-period.patch
 	patches.suse/net_sched-prio-fix-a-race-in-prio_tune.patch
 	patches.suse/net_sched-red-fix-a-race-in-__red_change.patch
