--- a/series.conf
+++ b/series.conf
@@ -8825,6 +8825,7 @@
 	patches.suse/selftests-seccomp-fix-syscall_restart-test-for-arm-c.patch
 	patches.suse/selftests-seccomp-fix-negative_ENOSYS-tracer-tests-o.patch
 	patches.suse/watchdog-exar-Shorten-identity-name-to-fit-correctly.patch
+	patches.suse/overflow-Fix-direct-struct-member-initialization-in-.patch
 	patches.suse/scsi-qedf-Use-designated-initializer-for-struct-qed_fcoe_c.patch
 	patches.suse/selinux-unify-OOM-handling-in-network-hashtables.patch
 	patches.suse/media-rkvdec-Fix-frame-size-enumeration.patch
