netlink: specs: tc: replace underscores with dashes in names (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9468,6 +9468,7 @@
 	patches.suse/bnxt-properly-flush-XDP-redirect-lists.patch
 	patches.suse/netlink-specs-nfsd-replace-underscores-with-dashes-i.patch
 	patches.suse/netlink-specs-dpll-replace-underscores-with-dashes-i.patch
+	patches.suse/netlink-specs-tc-replace-underscores-with-dashes-in-.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
