--- a/series.conf
+++ b/series.conf
@@ -9392,6 +9392,7 @@
 	patches.suse/net-mlx5-Fix-ECVF-vports-unload-on-shutdown-flow.patch
 	patches.suse/net-mlx5-Fix-return-value-when-searching-for-existin.patch
 	patches.suse/net-mlx5-HWS-fix-missing-ip_version-handling-in-defi.patch
+	patches.suse/net-mlx5-HWS-make-sure-the-uplink-is-the-last-destin.patch
 	patches.suse/net_sched-sch_sfq-reject-invalid-perturb-period.patch
 	patches.suse/net_sched-prio-fix-a-race-in-prio_tune.patch
 	patches.suse/net_sched-red-fix-a-race-in-__red_change.patch
