idpf: fix idpf_vport_splitq_napi_poll() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -8655,6 +8655,7 @@
 	patches.suse/ice-Fix-LACP-bonds-without-SRIOV-environment.patch
 	patches.suse/idpf-fix-null-ptr-deref-in-idpf_features_check.patch
 	patches.suse/xsk-Bring-back-busy-polling-support-in-XDP_COPY.patch
+	patches.suse/idpf-fix-idpf_vport_splitq_napi_poll.patch
 	patches.suse/sch_hfsc-Fix-qlen-accounting-bug-when-using-peek-in-hfsc_e.patch
 	patches.suse/espintcp-fix-skb-leaks.patch
 	patches.suse/xfrm-Fix-UDP-GRO-handling-for-some-corner-cases.patch
