idpf: avoid mailbox timeout delays during reset (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9280,6 +9280,7 @@
 	patches.suse/ice-create-new-Tx-scheduler-nodes-for-new-queues-onl.patch
 	patches.suse/ice-fix-rebuilding-the-Tx-scheduler-tree-for-large-q.patch
 	patches.suse/idpf-fix-a-race-in-txq-wakeup.patch
+	patches.suse/idpf-avoid-mailbox-timeout-delays-during-reset.patch
 	patches.suse/net-wwan-t7xx-Fix-napi-rx-poll-issue.patch
 	patches.suse/net-wwan-mhi_wwan_mbim-use-correct-mux_id-for-multip.patch
 	patches.suse/PM-sleep-Fix-power.is_suspended-cleanup-for-direct-c.patch
