net/mlx5: HWS, Fix matcher action template attach (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -8941,6 +8941,7 @@
 	patches.suse/arm64-fpsimd-ptrace-Do-not-present-register-data-for-inact.patch
 	patches.suse/arm64-fpsimd-ptrace-Mandate-SVE-payload-for-streaming-mode.patch
 	patches.suse/arm64-fpsimd-ptrace-Gracefully-handle-errors.patch
+	patches.suse/net-mlx5-HWS-Fix-matcher-action-template-attach.patch
 	patches.suse/net-ibmveth-Indented-struct-ibmveth_adapter-correctl.patch
 	patches.suse/net-ibmveth-Reset-the-adapter-when-unexpected-states.patch
 	patches.suse/net-ibmveth-added-KUnit-tests-for-some-buffer-pool-f.patch
