--- a/series.conf
+++ b/series.conf
@@ -9268,6 +9268,7 @@
 	patches.suse/rtc-Fix-offset-calculation-for-.start_secs-0.patch
 	patches.suse/arm64-Add-override-for-MPAM.patch
 	patches.suse/page_pool-Fix-use-after-free-in-page_pool_recycle_in.patch
+	patches.suse/gve-Fix-RX_BUFFERS_POSTED-stat-to-report-per-queue-f.patch
 	patches.suse/can-kvaser_pciefd-refine-error-prone-echo_skb_max-ha.patch
 	patches.suse/net-usb-aqc111-debug-info-before-sanitation.patch
 	patches.suse/Bluetooth-MGMT-reject-malformed-HCI_CMD_SYNC-command.patch
