iavf: iavf_suspend(): take RTNL before netdev_lock() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9284,6 +9284,7 @@
 	patches.suse/net-wwan-t7xx-Fix-napi-rx-poll-issue.patch
 	patches.suse/gve-add-missing-NULL-check-for-gve_alloc_pending_pac.patch
 	patches.suse/net-wwan-mhi_wwan_mbim-use-correct-mux_id-for-multip.patch
+	patches.suse/iavf-iavf_suspend-take-RTNL-before-netdev_lock.patch
 	patches.suse/PM-sleep-Fix-power.is_suspended-cleanup-for-direct-c.patch
 	patches.suse/drm-i915-gem-Allow-EXEC_CAPTURE-on-recoverable-conte.patch
 	patches.suse/drm-xe-Make-xe_gt_freq-part-of-the-Documentation.patch
