gve: add missing NULL check for gve_alloc_pending_packet() in TX DQO (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9282,6 +9282,7 @@
 	patches.suse/idpf-fix-a-race-in-txq-wakeup.patch
 	patches.suse/idpf-avoid-mailbox-timeout-delays-during-reset.patch
 	patches.suse/net-wwan-t7xx-Fix-napi-rx-poll-issue.patch
+	patches.suse/gve-add-missing-NULL-check-for-gve_alloc_pending_pac.patch
 	patches.suse/net-wwan-mhi_wwan_mbim-use-correct-mux_id-for-multip.patch
 	patches.suse/PM-sleep-Fix-power.is_suspended-cleanup-for-direct-c.patch
 	patches.suse/drm-i915-gem-Allow-EXEC_CAPTURE-on-recoverable-conte.patch
