--- a/series.conf
+++ b/series.conf
@@ -9467,6 +9467,7 @@
 	patches.suse/sunrpc-handle-SVC_GARBAGE-during-svc-auth-processing-as-auth-error.patch
 	patches.suse/bnxt-properly-flush-XDP-redirect-lists.patch
 	patches.suse/netlink-specs-nfsd-replace-underscores-with-dashes-i.patch
+	patches.suse/netlink-specs-dpll-replace-underscores-with-dashes-i.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
