--- a/series.conf
+++ b/series.conf
@@ -8037,6 +8037,7 @@
 	patches.kernel.org/6.12.35-413-bpftool-Fix-cgroup-command-to-only-show-cgrou.patch
 	patches.kernel.org/6.12.35-414-Linux-6.12.35.patch
 	patches.kernel.org/bridge-mcast-Fix-use-after-free-during-router-port-c.patch
+	patches.kernel.org/ata-ahci-Use-correct-DMI-identifier-for-ASUSPRO-D840.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
