blacklist.conf: add patches that need more work
9a709b7e98e6 io_uring/net: mark iov as dynamically allocated even for single segments
178b8ff66ff8 io_uring/kbuf: flag partial buffer mappings

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -25,3 +25,5 @@ MAINTAINERS		# We don't care about upstream MAINTAINERS file
 # -------------------
 34f71de3f548eba0604c9cbabc1eb68b2f81fa0f # conflicts
 fbecd731de05707a73a3d86c6cbe6b9441cdbedc # patch won't apply
+178b8ff66ff827c41b4fa105e9aabb99a0b5c537 # patch won't apply
+9a709b7e98e6fa51600b5f2d24c5068efa6d39de # patch won't apply
