--- a/series.conf
+++ b/series.conf
@@ -23916,6 +23916,7 @@
 	patches.suse/dmaengine-idxd-Refactor-remove-call-with-idxd_cleanu.patch
 	patches.suse/sch_hfsc-Fix-qlen-accounting-bug-when-using-peek-in-hfsc_e.patch
 	patches.suse/net_sched-hfsc-Address-reentrant-enqueue-adding-clas.patch
+	patches.suse/mm-hugetlb-unshare-page-tables-during-VMA-split-not-.patch
 	patches.suse/powerpc-powernv-memtrace-Fix-out-of-bounds-issue-in-.patch
 	patches.suse/powerpc-vas-Return-EINVAL-if-the-offset-is-non-zero-.patch
 	patches.suse/net_sched-prio-fix-a-race-in-prio_tune.patch
