--- a/series.conf
+++ b/series.conf
@@ -8887,6 +8887,7 @@
 	patches.suse/drm-msm-gpu-Fix-crash-when-throttling-GPU-immediatel.patch
 	patches.suse/drm-msm-a6xx-Disable-rgb565_predicator-on-Adreno-7c3.patch
 	patches.suse/NFSD-unregister-filesystem-in-case-genl_register_family-fails.patch
+	patches.suse/NFSD-fix-race-between-nfsd-registration-and-exports_proc.patch
 	patches.suse/nfsd-Initialize-ssc-before-laundromat_work-to-prevent-NULL-dereference.patch
 	patches.suse/svcrdma-Unregister-the-device-if-svc_rdma_accept-fails.patch
 	patches.suse/svcrdma-Reduce-the-number-of-rdma_rw-contexts-per-QP.patch
