--- a/series.conf
+++ b/series.conf
@@ -9198,6 +9198,7 @@
 	patches.suse/selftests-mm-restore-default-nr_hugepages-value-duri.patch
 	patches.suse/Squashfs-check-return-result-of-sb_min_blocksize.patch
 	patches.suse/EDAC-altera-Use-correct-write-width-with-the-INTTEST.patch
+	patches.suse/overflow-Introduce-__DEFINE_FLEX-for-having-no-initi.patch
 	patches.suse/mailbox-imx-Fix-TXDB_V2-sending.patch
 	patches.suse/mailbox-mtk-cmdq-Refine-GCE_GCTL_VALUE-setting.patch
 	patches.suse/mtd-nand-ecc-mxic-Fix-use-of-uninitialized-variable-.patch
