NFSD: Implement FATTR4_CLONE_BLKSIZE attribute (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -8891,6 +8891,7 @@
 	patches.suse/nfsd-nfsd4_spo_must_allow-must-check-this-is-a-v4-compound-request.patch
 	patches.suse/nfsd-Initialize-ssc-before-laundromat_work-to-prevent-NULL-dereference.patch
 	patches.suse/svcrdma-Unregister-the-device-if-svc_rdma_accept-fails.patch
+	patches.suse/NFSD-Implement-FATTR4_CLONE_BLKSIZE-attribute.patch
 	patches.suse/svcrdma-Reduce-the-number-of-rdma_rw-contexts-per-QP.patch
 	patches.suse/dlm-mask-sk_shutdown-value.patch
 	patches.suse/dlm-use-SHUT_RDWR-for-SCTP-shutdown.patch
