KVM: x86: Explicitly zero-initialize on-stack CPUID unions (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -7974,6 +7974,7 @@
 	patches.suse/KVM-s390-Don-t-use-pK-through-tracepoints.patch
 	patches.suse/KVM-s390-Don-t-use-pK-through-debug-printing.patch
 	patches.suse/KVM-Allow-building-irqbypass.ko-as-as-module-when-kv.patch
+	patches.suse/KVM-x86-Explicitly-zero-initialize-on-stack-CPUID-un.patch
 	patches.suse/smccc-kvm_guest-Align-with-DISCOVER_IMPL_CPUS-ABI.patch
 	patches.suse/KVM-arm64-Use-acquire-release-to-communicate-FF-A-ve.patch
 	patches.suse/mtd-inftlcore-Add-error-check-for-inftl_read_oob.patch
