io_uring: gate REQ_F_ISREG on !S_ANON_INODE as well (io_uring-regression).

--- a/series.conf
+++ b/series.conf
@@ -1535,6 +1535,7 @@
 	########################################################
 	patches.suse/firmware-qemu_fw_cfg-Do-not-hard-depend-on-CONFIG_HA.patch
 	patches.suse/drm-amd-display-Add-sanity-checks-for-drm_edid_raw.patch
+	patches.suse/io_uring-gate-REQ_F_ISREG-on-S_ANON_INODE-as-well.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
