KVM: SVM: Clear current_vmcb during vCPU free for all *possible* CPUs (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9307,6 +9307,7 @@
 	patches.suse/Input-gpio-keys-fix-possible-concurrent-access-in-gp.patch
 	patches.suse/Input-ims-pcu-check-record-size-in-ims_pcu_flash_fir.patch
 	patches.suse/KVM-VMX-use-__always_inline-for-is_td_vcpu-and-is_td.patch
+	patches.suse/KVM-SVM-Clear-current_vmcb-during-vCPU-free-for-all-.patch
 	patches.suse/KVM-x86-Revert-kvm_x86_ops.mem_enc_ioctl-back-to-an-.patch
 	patches.suse/arm64-sysreg-Drag-linux-kconfig.h-to-work-around-vdso-buil.patch
 	patches.suse/msft-hv-3260-tools-hv-Enable-debug-logs-for-hv_kvp_daemon.patch
