- virtio_net: xsk: bind/unbind xsk for tx (git-fixes). - Update   patches.suse/virtio-net-free-xsk_buffs-on-error-in-virtnet_xsk_po.patch   (git-fixes). - Refresh   patches.suse/virtio_net-ensure-netdev_tx_reset_queue-is-called-on.patch.

--- a/series.conf
+++ b/series.conf
@@ -1120,6 +1120,7 @@
 	patches.suse/igb-Fix-2-typos-in-comments-in-igb_main.c.patch
 	patches.suse/igbvf-remove-unused-spinlock.patch
 	patches.suse/e1000-Hold-RTNL-when-e1000_down-can-be-called.patch
+	patches.suse/virtio_net-xsk-bind-unbind-xsk-for-tx.patch
 	patches.suse/xfrm-Add-support-for-per-cpu-xfrm-state-handling.patch
 	patches.suse/xfrm-Add-error-handling-when-nla_put_u32-returns-an-.patch
 	patches.suse/net-neighbor-clear-error-in-case-strict-check-is-not.patch
