kernel-obs-qa: Do not depend on srchash when qemu emulation is used
In this case the dependency is never fulfilled

Fixes: 485ae1da2b88 ("kernel-obs-qa: Use srchash for dependency as well")

--- a/rpm/kernel-obs-qa.spec.in
+++ b/rpm/kernel-obs-qa.spec.in
@@ -35,7 +35,9 @@ Group:          SLES
 BuildRequires:  kernel-default
 # kernel-obs-build must be also configured as VMinstall, but is required
 # here as well to avoid that qa and build package build parallel
+%if ! 0%{?qemu_user_space_build}
 BuildRequires:  kernel-obs-build-srchash-@COMMIT_FULL@
+%endif
 BuildRequires:  modutils
 ExclusiveArch:  @ARCHS@
 
