- vhost-scsi: Add better resource allocation failure handling   (git-fixes). - Refresh   patches.suse/vhost-scsi-Fix-vhost_scsi_send_bad_target.patch.

--- a/series.conf
+++ b/series.conf
@@ -7770,6 +7770,7 @@
 	patches.suse/vhost-scsi-Fix-handling-of-multiple-calls-to-vhost_s.patch
 	patches.suse/vdpa-mlx5-Fix-oversized-null-mkey-longer-than-32bit.patch
 	patches.suse/sound-virtio-Fix-cancel_sync-warnings-on-uninitializ.patch
+	patches.suse/vhost-scsi-Add-better-resource-allocation-failure-ha.patch
 	patches.suse/rtnetlink-Allocate-vfinfo-size-for-VF-GUIDs-when-sup.patch
 	patches.suse/rndis_host-Flag-RNDIS-modems-as-WWAN-devices.patch
 	patches.suse/msft-hv-3231-net-mana-Switch-to-page-pool-for-jumbo-frames.patch
