vsock: avoid timeout during connect() if the socket is closing (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -7925,6 +7925,7 @@
 	patches.suse/net-mvpp2-Prevent-parser-TCAM-memory-corruption.patch
 	patches.suse/udp-Fix-multiple-wraparounds-of-sk-sk_rmem_alloc.patch
 	patches.suse/udp-Fix-memory-accounting-leak.patch
+	patches.suse/vsock-avoid-timeout-during-connect-if-the-socket-is-.patch
 	patches.suse/net-decrease-cached-dst-counters-in-dst_release.patch
 	patches.suse/gve-handle-overflow-when-reporting-TX-consumed-descr.patch
 	patches.suse/sfc-fix-NULL-dereferences-in-ef100_process_design_pa.patch
