tools/power turbostat: Fix AMD package-energy reporting (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9455,6 +9455,7 @@
 	patches.suse/ASoC-Intel-avs-Verify-content-returned-by-parse_int_.patch
 	patches.suse/genksyms-Fix-enum-consts-from-a-reference-affecting-new-va.patch
 	patches.suse/PCI-MSI-Size-device-MSI-domain-with-the-maximum-numb.patch
+	patches.suse/tools-power-turbostat-Fix-AMD-package-energy-reporting.patch
 	patches.suse/powerpc-powernv-memtrace-Fix-out-of-bounds-issue-in-.patch
 	patches.suse/powerpc-vas-Return-EINVAL-if-the-offset-is-non-zero-.patch
 	patches.suse/pinctrl-qcom-pinctrl-qcm2290-Add-missing-pins.patch
