kernel/watchdog: always restore watchdog_softlockup(,hardlockup)_user_enabled after proc show (bsc#1245522). Refresh patches.suse/watchdog-fix-watchdog-may-detect-false-positive-of-s.patch (bsc#1245523).

--- a/series.conf
+++ b/series.conf
@@ -1864,6 +1864,7 @@
 	patches.suse/fbdev-sh7760fb-Fix-a-possible-memory-leak-in-sh7760f.patch
 	patches.suse/x86-fix-off-by-one-in-access_ok.patch
 	patches.suse/lib-string_helpers-silence-snprintf-output-truncatio.patch
+	patches.suse/kernel-watchdog-always-restore-watchdog_softlockup-hardloc.patch
 	patches.suse/lib-Kconfig.debug-move-int_pow-test-option-to-runtim.patch
 	patches.suse/scatterlist-fix-a-typo.patch
 	patches.suse/ipc-fix-memleak-if-msg_init_ns-failed-in-create_ipc_ns.patch
