scsi: storvsc: Increase the timeouts to storvsc_timeout (bsc#1245455).

--- a/series.conf
+++ b/series.conf
@@ -24117,6 +24117,7 @@
 	patches.suse/powerpc-powernv-memtrace-Fix-out-of-bounds-issue-in-.patch
 	patches.suse/powerpc-vas-Return-EINVAL-if-the-offset-is-non-zero-.patch
 	patches.suse/net_sched-prio-fix-a-race-in-prio_tune.patch
+	patches.suse/msft-hv-3282-scsi-storvsc-Increase-the-timeouts-to-storvsc_timeou.patch
 
 	# out-of-tree patches
 	patches.suse/net-dcb-check-for-detached-device-before-executing-c.patch
