scsi: storvsc: Don't report the host packet status as the hv status (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -50357,6 +50357,7 @@
 	patches.suse/x86-speculation-Simplify-and-make-CALL_NOSPEC-consistent.patch
 	patches.suse/x86-speculation-Add-a-conditional-CS-prefix-to-CALL_NOSPEC.patch
 	patches.suse/memstick-rtsx_usb_ms-Fix-slab-use-after-free-in-rtsx.patch
+	patches.suse/msft-hv-3208-scsi-storvsc-Don-t-report-the-host-packet-status-as-.patch
 	patches.suse/jfs-fix-slab-out-of-bounds-read-in-ea_get.patch
 	patches.suse/ext4-fix-OOB-read-when-checking-dotdot-dir.patch
 	patches.suse/tpm-tpm_tis-Workaround-failed-command-reception-on-I.patch
