--- a/series.conf
+++ b/series.conf
@@ -32750,6 +32750,7 @@
 	patches.suse/i2c-tiny-usb-disable-zero-length-read-messages.patch
 	patches.suse/serial-imx-Restore-original-RXTL-for-console-to-fix-.patch
 	patches.suse/staging-rtl8723bs-Avoid-memset-in-aes_cipher-and-aes.patch
+	patches.suse/rtc-cmos-use-spin_lock_irqsave-in-cmos_interrupt.patch
 
 	########################################################
 	# end of sorted patches
