rtc: cmos: use spin_lock_irqsave in cmos_interrupt (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9626,6 +9626,7 @@
 	patches.suse/serial-core-restore-of_node-information-in-sysfs.patch
 	patches.suse/serial-imx-Restore-original-RXTL-for-console-to-fix-.patch
 	patches.suse/staging-rtl8723bs-Avoid-memset-in-aes_cipher-and-aes.patch
+	patches.suse/rtc-cmos-use-spin_lock_irqsave-in-cmos_interrupt.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
