- blacklist.conf: 2 fixes to drivers we don't build - Delete patches.suse/watchdog-da9052_wdt-respect-TWDMIN.patch.

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -396,3 +396,5 @@ c4c9cebe2fb9cdc73e55513de7af7a4f50260e88 # optimization only, inlines would comp
 e1a0202c6bfda24002a3ae2115154fa90104c649 # unneeded, may be taken as a prereq later
 1bf67c8fdbda21fadd564a12dbe2b13c1ea5eda7 # applies to CONFIG_CPUSETS_V1 only and obsolete cpuset FS
 87c259a7a359e73e6c52c68fcbec79988999b4e6 # only for CONFIG_LOCKDEP
+5af9f1fa576874b24627d4c05e3a84672204c200 # CONFIG_RTC_DRV_LOONGSON=n
+325f510fcd9cda5a44bcb662b74ba4e3dabaca10 # CONFIG_DA9052_WATCHDOG=n
