--- a/series.conf
+++ b/series.conf
@@ -9597,6 +9597,7 @@
 	patches.suse/HID-wacom-fix-crash-in-wacom_aes_battery_handler.patch
 	patches.suse/ALSA-usb-audio-Fix-out-of-bounds-read-in-snd_usb_get.patch
 	patches.suse/ALSA-hda-realtek-Fix-built-in-mic-on-ASUS-VivoBook-X-7ab6847.patch
+	patches.suse/ata-ahci-Use-correct-DMI-identifier-for-ASUSPRO-D840.patch
 	patches.suse/drm-amd-Adjust-output-for-discovery-error-handling.patch
 	patches.suse/drm-i915-fix-build-error-some-more.patch
 	patches.suse/drm-xe-display-Add-check-for-alloc_ordered_workqueue.patch
