--- a/series.conf
+++ b/series.conf
@@ -59274,6 +59274,7 @@
 	patches.suse/proc-fix-UAF-in-proc_get_inode.patch
 	patches.suse/net-atm-fix-use-after-free-in-lec_send.patch
 	patches.suse/memstick-rtsx_usb_ms-Fix-slab-use-after-free-in-rtsx.patch
+	patches.suse/msft-hv-3208-scsi-storvsc-Don-t-report-the-host-packet-status-as-.patch
 	patches.suse/ACPI-processor-idle-return-an-error-if-both-P_LVL-2-.patch
 	patches.suse/net-fix-geneve_opt-length-integer-overflow.patch
 	patches.suse/sch_htb-make-htb_qlen_notify-idempotent.patch
