--- a/series.conf
+++ b/series.conf
@@ -59294,6 +59294,7 @@
 	patches.suse/sch_hfsc-Fix-qlen-accounting-bug-when-using-peek-in-hfsc_e.patch
 	patches.suse/net_sched-hfsc-Address-reentrant-enqueue-adding-clas.patch
 	patches.suse/net_sched-prio-fix-a-race-in-prio_tune.patch
+	patches.suse/msft-hv-3282-scsi-storvsc-Increase-the-timeouts-to-storvsc_timeou.patch
 
 	########################################################
 	# end of sorted patches
