drm/i915/snps_hdmi_pll: Fix 64-bit divisor truncation by using div64_u64 (bsc#1245446).

--- a/series.conf
+++ b/series.conf
@@ -1517,6 +1517,7 @@
 	patches.suse/drm-amd-display-Fix-default-DC-and-AC-levels.patch
 	patches.suse/wifi-remove-zero-length-arrays.patch
 	patches.suse/bridge-mcast-Fix-use-after-free-during-router-port-c.patch
+	patches.suse/drm-i915-snps_hdmi_pll-Fix-64-bit-divisor-truncation.patch
 	########################################################
 	# end of sorted patches
 	########################################################
