treewide: Convert new and leftover hrtimer_init() users (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -7992,6 +7992,7 @@
 	patches.suse/drm-amdgpu-gfx12-fix-num_mec.patch
 	patches.suse/kbuild-exclude-.rodata.-cst-str-when-building-ranges.patch
 	patches.suse/Revert-kheaders-Ignore-silly-rename-files.patch
+	patches.suse/treewide-Convert-new-and-leftover-hrtimer_init-users.patch
 	patches.suse/perf-core-Fix-child_total_time_enabled-accounting-bug-at-t.patch
 	patches.suse/tools-power-turbostat-Allow-Zero-return-value-for-some-RAPL-registers.patch
 	patches.suse/tools-power-turbostat-Increase-CPU_SUBSET_MAXCPUS-to-8192.patch
