--- a/series.conf
+++ b/series.conf
@@ -9350,6 +9350,7 @@
 	patches.suse/mtd-nand-sunxi-Add-randomizer-configuration-before-r.patch
 	patches.suse/mtd-rawnand-sunxi-Add-randomizer-configuration-in-su.patch
 	patches.suse/mtd-rawnand-brcmnand-legacy-exec_op-implementation.patch
+	patches.suse/Input-gpio-keys-fix-a-sleep-while-atomic-with-PREEMP.patch
 	patches.suse/Input-gpio-keys-fix-possible-concurrent-access-in-gp.patch
 	patches.suse/Input-ims-pcu-check-record-size-in-ims_pcu_flash_fir.patch
 	patches.suse/KVM-VMX-use-__always_inline-for-is_td_vcpu-and-is_td.patch
