--- a/blacklist.conf
+++ b/blacklist.conf
@@ -54,6 +54,7 @@ drivers/net/arcnet/			#ARCnet is not enabled
 drivers/net/ethernet/davicom/           # dm9000 legacy driver
 drivers/net/ethernet/natsemi/sonic.c    #m68k Apple Macintosh
 drivers/net/ethernet/natsemi/sonic.h
+drivers/platform/loongarch		# mips
 drivers/staging/android
 drivers/video/fbdev/hyperv_fb.c
 drivers/cpuidle/cpuidle-riscv-sbi.c     # RISC-V not supported
