r8152: add vendor/device ID pair for Dell Alienware AW1022z (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -31405,6 +31405,7 @@
 	patches.suse/scsi-st-Tighten-the-page-format-heuristics-with-MODE-SELEC.patch
 	patches.suse/coredump-Fixes-core_pipe_limit-sysctl-proc_handler.patch
 	patches.suse/net-usb-qmi_wwan-add-Telit-Cinterion-FN990B-composit.patch
+	patches.suse/r8152-add-vendor-device-ID-pair-for-Dell-Alienware-A.patch
 	patches.suse/net-usb-asix_devices-add-FiberGecko-DeviceID.patch
 	patches.suse/page_pool-avoid-infinite-loop-to-schedule-delayed-worker.patch
 	patches.suse/can-c_can-Use-of_property_present-to-test-existence-.patch
