bonding: Correctly support GSO ESP offload (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -51076,6 +51076,7 @@
 	patches.suse/usbnet-ipheth-fix-DPE-OoB-read.patch
 	patches.suse/usbnet-ipheth-document-scope-of-NCM-implementation.patch
 	patches.suse/ethtool-Fix-set-RXNFC-command-with-symmetric-RSS-has.patch
+	patches.suse/bonding-Correctly-support-GSO-ESP-offload.patch
 	patches.suse/vsock-Keep-the-binding-until-socket-destruction.patch
 	patches.suse/net-xdp-Disallow-attaching-device-bound-programs-in-.patch
 	patches.suse/Bluetooth-btusb-mediatek-Add-locks-for-usb_driver_cl.patch
