--- a/series.conf
+++ b/series.conf
@@ -53655,6 +53655,7 @@
 	patches.suse/bnxt_en-Fix-double-invocation-of-bnxt_ulp_stop-bnxt_.patch
 	patches.suse/net-sched-fix-use-after-free-in-taprio_dev_notifier.patch
 	patches.suse/net-ice-Perform-accurate-aRFS-flow-match.patch
+	patches.suse/ice-fix-eswitch-code-memory-leak-in-reset-scenario.patch
 	patches.suse/e1000e-set-fixed-clock-frequency-indication-for-Nahu.patch
 	patches.suse/calipso-Fix-null-ptr-deref-in-calipso_req_-set-del-a.patch
 	patches.suse/NFC-nci-uart-Set-tty-disc_data-only-in-success-path.patch
