--- a/series.conf
+++ b/series.conf
@@ -53614,6 +53614,7 @@
 	patches.suse/net-mlx5-Ensure-fw-pages-are-always-allocated-on-sam.patch
 	patches.suse/net-mlx5-Fix-ECVF-vports-unload-on-shutdown-flow.patch
 	patches.suse/net-mlx5-Fix-return-value-when-searching-for-existin.patch
+	patches.suse/net-mlx5-HWS-fix-missing-ip_version-handling-in-defi.patch
 	patches.suse/net-mlx5e-Fix-leak-of-Geneve-TLV-option-object.patch
 	patches.suse/net_sched-sch_sfq-reject-invalid-perturb-period.patch
 	patches.suse/net_sched-prio-fix-a-race-in-prio_tune.patch
